--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,257 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    font-stretch: ultra-condensed;
+    font-weight: lighter;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+}
+body{
+    background-color:lightgrey;
+    margin: 1em 3em;
+    padding: 0.5em;
+    min-width: 380px;
+}
+h1, h2, h3, h4{
+    font-family: Copperplate;
+    font-weight: bold;
+}
+header h1{
+    font-size: 2em;
+    font-stretch: extra-condensed;
+    /*background-color: black;*/
+    color: darkmagenta;
+    padding: 0.5em;
+    font-stretch: extra-condensed;
+}
+section h1{
+    font-size: 2em;
+    font-stretch: extra-condensed;
+    color: darkmagenta;
+    padding: 0.5em;
+    font-stretch: extra-condensed;
+    border-bottom: 1px solid darkslategrey;
+}
+h2{
+    font-size: 1.6px;
+}
+h3{
+    font-size: 11px
+}
+h4{
+    font-size: 10.5px;
+}
+a{
+        text-decoration: none !important;
+}
+.menu-items a:hover{
+    background-color: palevioletred;
+}
+.active{
+        background-color: palevioletred;
+}
+p{
+    font-size: 10px;
+}
+.subtext{
+    display: block;
+    font-size: 8px;
+    color: grey;
+}
+
+.status{
+    border: 1px blue dotted;
+}
+.failed{
+    color: indianred;
+}
+
+.items{
+    display: flex;
+    flex-wrap: wrap;
+}
+li{
+    list-style: none;
+}
+li:hover{
+    /*transform: scale(1.001);*/
+    background: lightgray;
+    color: darkblue;
+}
+li:hover .ranking{
+    transform: scale(1.02);
+}
+
+li img{
+    transition: transform 800ms;
+}
+li:hover img{
+    transform: scale(1.02)
+}
+.action{
+    padding: 2px;
+    display: inline-flex;
+    background-color: black;
+    font-stretch: extra-condensed;
+    color: floralwhite;
+    vertical-align: middle;
+    font-size: 10px;
+    margin-left: 2px;
+}
+.action div{
+    padding: 2px 4px;
+    background-color: darkgray;
+    color: darkred;    
+}
+.action div:hover{
+    background: green;
+}
+section{
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+section > h1{
+    font-size: 1.6em;
+    border-radius: 10px;
+}
+.snaplist{
+    width: 90%;
+    overflow-y: auto;
+
+}
+.snaplist li{
+    display: flex;
+    /*align-items: stretch;*/
+    padding: 1px;
+    /*flex-wrap: wrap;*/
+}
+.videoComp{
+    display: flex;
+    /*margin: 0 .5em;*/
+}
+.videoComp:hover{
+    background-color: gainsboro;
+    cursor: pointer
+}
+.ranking{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 3em;
+    /*width: 2.2em;*/
+    /*height: 2.2em;*/
+    border-radius: 1%;
+    background: darkred;
+    box-shadow: 1px 6px darkslategrey;
+    text-align: center;
+    line-height: 2.2em;
+    vertical-align: middle;
+    text-shadow: 1px 1px saddlebrown; 
+    flex: 0 0 2.23em;
+
+    /*color: white;*/
+    /*text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;*/
+}
+
+videoComp .item-title{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 1em; 
+    font-weight: lighter;
+    padding: 2px;
+    max-width: 30em;
+}
+
+.videoComp .item-name{
+    font-weight: bolder;
+    font-size: 10.2px;
+    display: inline;
+    padding: .2em;
+    margin: 2px 0px;
+    bottom: -1px;
+    position: relative;
+    right: 2px;
+    color: darkmagenta;
+}
+videoComp .count{
+    display: none;
+}
+.count{
+    font-family: monospace;
+    font-weight: bolder;
+}
+.heading{
+        color: darkred;
+        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.topbar{
+    height: 3em;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    margin-bottom: 2em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 1em;
+    position: fixed;
+    top: 0.5em;
+    width: 90%;
+    z-index: 1000;
+    background-color: lightgray;
+}
+
+.menu{
+    position: relative;
+    display: inline-block;
+}
+.menubtn{
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    z-index: 1
+}
+.menu-items{
+    display: inline-flex;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 2;
+}
+.menu-items a{
+    text-decoration: none;
+    padding: 12px 16px;
+    border-right: 1px solid;
+}
+
+.menu-items :nth-last-child(1){
+    border-right: none;
+}
+.menubtn:active .menu-items {
+    display: none;
+}
+
+.content{
+    top: 3em;
+}
+@media screen and (max-width: 680px){
+    .menu-items {
+    flex-direction: column;
+    top: 1em;
+    position: absolute;
+}
+
+}
+
+.disabled{
+    color: darkslategrey;
+    background-color: dimgrey;
+}
+
+.disabled:hover{
+    cursor: not-allowed;
+    content: 'Not available now'
+}
+
+.sigma{
+    color: cadetblue;
+    text-shadow: -1px 0 black, 0 1px green, 1px 0 blue, 0 -1px white;
+    font-size: large;
+}
+footer{
+    margin-top: 1em;
+}
